# telegram-always-online

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-on-pr.yaml
app/tests/: conftest.py  test_main.py
docker/: Dockerfile.build  Dockerfile.build.dockerignore  Dockerfile.lint  Dockerfile.lint.dockerignore  Dockerfile.test  Dockerfile.test.dockerignore
